using Pgvector;

namespace Repository.Entities
{
    public class ChapterChunk
    {
        public Guid Id { get; set; }

        /// <summary>FK to ChapterVersions.Id</summary>
        public Guid VersionId { get; set; }

        /// <summary>FK to Projects.Id (denormalized để query nhanh)</summary>
        public Guid ProjectId { get; set; }

        /// <summary>Vị trí chunk trong version (0, 1, 2...)</summary>
        public int ChunkIndex { get; set; }

        /// <summary>AES-256 encrypted chunk content</summary>
        public string Content { get; set; } = string.Empty;

        /// <summary>Số token ước tính của chunk này</summary>
        public int TokenCount { get; set; } = 0;

        /// <summary>
        /// Vector embedding (768 dims cho Gemini gemini-embedding-001).
        /// Mapped sang column vector(768) trong PostgreSQL qua Pgvector.EntityFrameworkCore.
        /// </summary>
        public Vector? Embedding { get; set; }

        public DateTime CreatedAt { get; set; } = DateTime.UtcNow;

        // Navigation
        public ChapterVersion Version { get; set; } = null!;
        public Project Project { get; set; } = null!;
    }
}
