using System;

namespace Repository.Entities
{
    public class User
    {
        public Guid Id { get; set; }
        public string FullName { get; set; } = string.Empty;
        public string Email { get; set; } = string.Empty;
        public string PasswordHash { get; set; } = string.Empty;
        public string PasswordSalt { get; set; } = string.Empty;
        public int PasswordFormatVersion { get; set; } = 1;
        public string? AvatarURL { get; set; }
        public string Role { get; set; } = "Author";
        public bool IsActive { get; set; } = true;
        public string? DataEncryptionKey { get; set; }
        public DateTime CreatedAt { get; set; } = DateTime.UtcNow;
        public string? RefreshToken { get; set; }
        public DateTime? RefreshTokenExpiryTime { get; set; }
        public string? PasswordResetToken { get; set; }
        public DateTime? PasswordResetTokenExpiryTime { get; set; }
        public string? EmailVerificationOtp { get; set; }
        public DateTime? EmailVerificationOtpExpiry { get; set; }
        public int StrikeCount { get; set; } = 0;
        public bool IsBanned { get; set; } = false;
        public string? BanReason { get; set; }
        public bool IsBanRequested { get; set; } = false;
        public string? BanRequestReason { get; set; }
        public Guid? BanRequestedBy { get; set; }
    }
}
