Project StoryRAG {
  database_type: "PostgreSQL"
  Note: "Generated from Backend/supabase_full_reset.sql — Story Bible manual tables removed (v1.5)"
}

Table __EFMigrationsHistory {
  MigrationId varchar(150) [pk]
  ProductVersion varchar(32)
}

Table Users {
  Id uuid [pk]
  FullName varchar(100)
  Email varchar(100)
  PasswordHash text
  PasswordSalt text
  PasswordFormatVersion int
  AvatarURL varchar(500)
  Role varchar(20)
  IsActive bool
  DataEncryptionKey text
  CreatedAt timestamptz
  RefreshToken text
  RefreshTokenExpiryTime timestamptz
  PasswordResetToken text
  PasswordResetTokenExpiryTime timestamptz
}

Table SubscriptionPlans {
  Id int [pk]
  PlanName varchar(50)
  Price decimal(18,2)
  MaxAnalysisCount int
  MaxTokenLimit bigint
  Description text
  IsActive bool
}

Table Genres {
  Id int [pk]
  Name varchar(100)
  Slug varchar(100)
  Color varchar(20)
  Description varchar(500)
}

Table Projects {
  Id uuid [pk]
  AuthorId uuid
  Title text
  Summary text
  AiInstructions text
  SummaryEmbedding vector(768)
  CoverImageURL varchar(500)
  Status varchar(20)
  IsDeleted bool
  CreatedAt timestamptz
  UpdatedAt timestamptz
}

Table UserSubscriptions {
  Id int [pk]
  UserId uuid
  PlanId int
  StartDate timestamptz
  EndDate timestamptz
  Status varchar(20)
  UsedAnalysisCount int
  UsedTokens bigint
  CreatedAt timestamptz
}

Table ProjectGenres {
  ProjectId uuid
  GenreId int

  indexes {
    (ProjectId, GenreId) [pk]
  }
}

Table ChapterVersions {
  Id uuid [pk]
  ChapterId uuid
  VersionNumber int
  Content text
  ChangeNote text
  WordCount int
  TokenCount int
  CreatedBy uuid
  IsChunked bool
  IsEmbedded bool
  IsPinned bool
  Title varchar(255)
  UpdatedAt timestamptz
  CreatedAt timestamptz
}

Table Chapters {
  Id uuid [pk]
  ProjectId uuid
  ChapterNumber int
  Title varchar(255)
  WordCount int
  Status varchar(20)
  CurrentVersionId uuid
  CurrentVersionNum int
  IsDeleted bool
  DraftContent text
  DraftSavedAt timestamptz
  CreatedAt timestamptz
  UpdatedAt timestamptz
}

Table ChapterChunks {
  Id uuid [pk]
  VersionId uuid
  ProjectId uuid
  ChunkIndex int
  Content text
  TokenCount int
  Embedding vector(768)
  CreatedAt timestamptz
}

Table UserSettings {
  UserId uuid [pk]
  EditorFont varchar(100)
  EditorFontSize int
}

Table ProjectReports {
  Id uuid [pk]
  ProjectId uuid
  UserId uuid
  Status varchar(20)
  TotalScore decimal(5,2)
  CriteriaJson jsonb
  GenresSnapshot jsonb
  ProjectVersion varchar(50)
  CreatedAt timestamptz
  UpdatedAt timestamptz
}

Table ProjectAnalysisJobs {
  Id uuid [pk]
  ProjectId uuid
  UserId uuid
  Status varchar(20)
  Stage varchar(30)
  Progress int
  ProjectVersionHash varchar(128)
  ReportId uuid
  ErrorMessage varchar(2000)
  CreatedAt timestamptz
  StartedAt timestamptz
  CompletedAt timestamptz
  UpdatedAt timestamptz
}

// [REMOVED] Story Bible manual-entry tables have been deleted:
// WorldbuildingEntries, CharacterEntries, StyleGuideEntries,
// ThemeEntries, PlotNoteEntries, TimelineEvents
//
// Story Bible data is now auto-extracted by AI during analysis
// and stored as snapshots in ProjectReports / ProjectAnalysisFacts.
// Migration: 20260529000000_RemoveManualStoryBibleTables

Table ChatMessages {
  Id uuid [pk]
  ProjectId uuid
  UserId uuid
  Question text
  Answer text
  InputTokens int
  OutputTokens int
  TotalTokens int
  CreatedAt timestamptz
}

Table AiAnalysisHistories {
  Id uuid [pk]
  ProjectId uuid
  ChapterId uuid
  UserId uuid
  AnalysisType varchar(50)
  EncryptedContext text
  EncryptedResult text
  TotalTokens int
  CreatedAt timestamptz
}

Table BugReports {
  Id uuid [pk]
  UserId uuid
  Title varchar(200)
  Description text
  Category varchar(30)
  Priority varchar(20)
  Status varchar(20)
  StaffNote varchar(1000)
  ResolvedById uuid
  ImageUrl varchar(500)
  CreatedAt timestamptz
  UpdatedAt timestamptz
}

Table StaffFeedbacks {
  Id uuid [pk]
  ProjectId uuid
  ProjectReportId uuid
  ChapterId uuid
  AuthorId uuid
  StaffId uuid
  Content varchar(3000)
  Status varchar(20)
  StaffNote varchar(3000)
  UserReaction varchar(20)
  UserFeedback varchar(3000)
  UserRespondedAt timestamptz
  CreatedAt timestamptz
  UpdatedAt timestamptz
  ReadAt timestamptz
  GenresSnapshot jsonb
}

Table faqs {
  Id uuid [pk]
  Question varchar(300)
  Answer varchar(5000)
  Category varchar(50)
  Order int
  Published bool
  UpdatedAt timestamptz
}

Table writing_tips {
  Id uuid [pk]
  Title varchar(200)
  Content varchar(8000)
  Tags text[]
  Published bool
  UpdatedAt timestamptz
}

Table StaffAnalysisReviews {
  Id uuid [pk]
  ProjectReportId uuid
  ProjectId uuid
  AuthorId uuid
  ReviewedBy uuid
  Action varchar(20)
  Note varchar(2000)
  RerunReportId uuid
  CreatedAt timestamptz
  UpdatedAt timestamptz
}

Table Payments {
  Id uuid [pk]
  UserId uuid
  SubscriptionId int
  PlanId int
  Amount decimal(18,2)
  Currency varchar(10)
  PaymentMethod varchar(50)
  Status varchar(20)
  TransactionId varchar(255)
  Description text
  PaidAt timestamptz
  RefundedAt timestamptz
  CreatedAt timestamptz
  UpdatedAt timestamptz
}

Table Notifications {
  Id uuid [pk]
  UserId uuid
  CreatedByUserId uuid
  Type varchar(20)
  Title varchar(200)
  Message varchar(3000)
  Tag varchar(120)
  IsRead bool
  CreatedAt timestamptz
  ReadAt timestamptz
}

Table ProjectAbuseFlags {
  Id uuid [pk]
  ProjectId uuid
  UserId uuid
  FlagReason varchar(500)
  Severity varchar(20)
  FlaggedAt timestamptz
}

Table ReportItems {
  Id uuid [pk]
  ProjectReportId uuid
  CriterionKey varchar(20)
  EvidenceChunkIds jsonb

  indexes {
    (ProjectReportId, CriterionKey) [unique]
  }
}

Table ProjectReportSnapshots {
  Id uuid [pk]
  ProjectReportId uuid
  ChapterNumber int
  Title varchar(255)
  Content text
  WordCount int
}

Table ProjectAnalysisFacts {
  Id uuid [pk]
  ProjectId uuid
  RunId uuid
  Payload jsonb
  CreatedAt timestamptz
}

Table analysis_job_rerun_audits {
  Id uuid [pk]
  OldJobId uuid
  NewJobId uuid
  StaffId uuid
  CreatedAt timestamptz

  indexes {
    OldJobId
    NewJobId [unique]
    StaffId
    CreatedAt
  }
}

Table system_config {
  Key varchar(200) [pk]
  Value jsonb
  UpdatedBy uuid
  UpdatedAt timestamptz
}

Table system_logs {
  Id uuid [pk]
  Level varchar(20)
  Category varchar(50)
  Action varchar(100)
  Message varchar(1000)
  ActorId uuid
  MetadataJson jsonb
  CreatedAt timestamptz
}

Table ReportCharacterEntries {
  Id uuid [pk]
  ProjectReportId uuid
  Name text
  Role varchar(50)
  Description text
  Background text
  TraitsJson text
  RelationshipsJson text
  FirstAppearance int
  CreatedAt timestamptz
}

Table ReportThemeEntries {
  Id uuid [pk]
  ProjectReportId uuid
  Title text
  Description text
  Evidence text
  CreatedAt timestamptz
}

Table ReportTimelineEvents {
  Id uuid [pk]
  ProjectReportId uuid
  Category varchar(50)
  Title text
  Description text
  TimeLabel varchar(100)
  SortOrder int
  Importance varchar(20)
  CreatedAt timestamptz
}

Table ReportWorldbuildingEntries {
  Id uuid [pk]
  ProjectReportId uuid
  Title text
  Content text
  Category varchar(50)
  Importance text
  SourceChaptersJson text
  CreatedAt timestamptz
}

Table StaffGenres {
  StaffId uuid
  GenreId int
  AssignedAt timestamptz
  AssignedBy uuid

  indexes {
    (StaffId, GenreId) [pk]
  }
}

Ref: Projects.AuthorId > Users.Id
Ref: UserSubscriptions.UserId > Users.Id
Ref: UserSubscriptions.PlanId > SubscriptionPlans.Id
Ref: ProjectGenres.ProjectId > Projects.Id
Ref: ProjectGenres.GenreId > Genres.Id
Ref: ChapterVersions.CreatedBy > Users.Id
Ref: ChapterVersions.ChapterId > Chapters.Id
Ref: Chapters.ProjectId > Projects.Id
Ref: Chapters.CurrentVersionId > ChapterVersions.Id
Ref: ChapterChunks.VersionId > ChapterVersions.Id
Ref: ChapterChunks.ProjectId > Projects.Id
Ref: UserSettings.UserId > Users.Id
Ref: ProjectReports.ProjectId > Projects.Id
Ref: ProjectReports.UserId > Users.Id
Ref: ProjectAnalysisJobs.ProjectId > Projects.Id
Ref: ProjectAnalysisJobs.UserId > Users.Id
Ref: ProjectAnalysisJobs.ReportId > ProjectReports.Id
// Refs for removed Story Bible tables have been deleted.
Ref: ChatMessages.ProjectId > Projects.Id
Ref: ChatMessages.UserId > Users.Id
Ref: AiAnalysisHistories.ProjectId > Projects.Id
Ref: AiAnalysisHistories.ChapterId > Chapters.Id
Ref: AiAnalysisHistories.UserId > Users.Id
Ref: BugReports.UserId > Users.Id
Ref: BugReports.ResolvedById > Users.Id
Ref: StaffFeedbacks.ProjectId > Projects.Id
Ref: StaffFeedbacks.ProjectReportId > ProjectReports.Id
Ref: StaffFeedbacks.ChapterId > Chapters.Id
Ref: StaffFeedbacks.AuthorId > Users.Id
Ref: StaffFeedbacks.StaffId > Users.Id
Ref: StaffAnalysisReviews.ProjectReportId > ProjectReports.Id
Ref: StaffAnalysisReviews.ProjectId > Projects.Id
Ref: StaffAnalysisReviews.AuthorId > Users.Id
Ref: StaffAnalysisReviews.ReviewedBy > Users.Id
Ref: StaffAnalysisReviews.RerunReportId > ProjectReports.Id
Ref: Payments.UserId > Users.Id
Ref: Payments.PlanId > SubscriptionPlans.Id
Ref: Payments.SubscriptionId > UserSubscriptions.Id

// Relationships for newly synchronized/added tables
Ref: Notifications.UserId > Users.Id
Ref: Notifications.CreatedByUserId > Users.Id
Ref: ProjectAbuseFlags.ProjectId > Projects.Id
Ref: ProjectAbuseFlags.UserId > Users.Id
Ref: ReportItems.ProjectReportId > ProjectReports.Id
Ref: ProjectReportSnapshots.ProjectReportId > ProjectReports.Id
Ref: ProjectAnalysisFacts.ProjectId > Projects.Id
Ref: ProjectAnalysisFacts.RunId > ProjectAnalysisJobs.Id
Ref: system_config.UpdatedBy > Users.Id
Ref: system_logs.ActorId > Users.Id
Ref: ReportCharacterEntries.ProjectReportId > ProjectReports.Id
Ref: ReportThemeEntries.ProjectReportId > ProjectReports.Id
Ref: ReportTimelineEvents.ProjectReportId > ProjectReports.Id
Ref: ReportWorldbuildingEntries.ProjectReportId > ProjectReports.Id
Ref: StaffGenres.StaffId > Users.Id
Ref: StaffGenres.GenreId > Genres.Id
Ref: StaffGenres.AssignedBy > Users.Id
